; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/vusb/extr_vusb.c_send_keyboard.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/vusb/extr_vusb.c_send_keyboard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kbuf_head = common dso_local global i32 0, align 4
@KBUF_SIZE = common dso_local global i32 0, align 4
@kbuf_tail = common dso_local global i32 0, align 4
@kbuf = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [12 x i8] c"kbuf: full\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @send_keyboard to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_keyboard(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @kbuf_head, align 4
  %5 = add nsw i32 %4, 1
  %6 = load i32, i32* @KBUF_SIZE, align 4
  %7 = srem i32 %5, %6
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @kbuf_tail, align 4
  %10 = icmp ne i32 %8, %9
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** @kbuf, align 8
  %15 = load i32, i32* @kbuf_head, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  store i32 %13, i32* %17, align 4
  %18 = load i32, i32* %3, align 4
  store i32 %18, i32* @kbuf_head, align 4
  br label %21

19:                                               ; preds = %1
  %20 = call i32 @debug(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  br label %21

21:                                               ; preds = %19, %11
  %22 = call i32 (...) @usbPoll()
  %23 = call i32 (...) @vusb_transfer_keyboard()
  ret void
}

declare dso_local i32 @debug(i8*) #1

declare dso_local i32 @usbPoll(...) #1

declare dso_local i32 @vusb_transfer_keyboard(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
